@@ -1,107 +1,98 @@
-/**
- * À chaque étape, la classe choisit une ville non visitée au hasard et
- * l'insère à la position optimale dans la tournée afin de minimiser
- * l'augmentation de la distance totale. La méthode {@link #computeTour(TspData, int, TspHeuristicObserver)}
- * gère l'itération et l'insertion.
- * <p>
- * @auteurs Ronquillo Cristhian, Muhlemann Julien
- */
-
 package ch.heig.sio.lab1.groupI.heuristique;
-import ch.heig.sio.lab1.display.TspHeuristicObserver;
+
 import ch.heig.sio.lab1.tsp.TspData;
-import ch.heig.sio.lab1.tsp.TspTour;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Random;
 
+/**
+ * <p>The {@code RandomInsertion} class implements the random insertion heuristic
+ * for solving the Traveling Salesman Problem (TSP).</p>
+ *
+ * <p>This heuristic starts with the starting city and randomly selects cities to insert
+ * into the tour. At each step, it finds the best position to insert the selected city
+ * to minimize the increase in the total tour length.</p>
+ *
+ * <p>Complexity (space and time): O(^2)</p>
+ *
+ */
 public class RandomInsertion extends InsertionHeuristic {
 
+    /** A list of cities that have not yet been inserted into the tour. */
+    private List<Integer> remainingCities;
+
+    /** A Random instance with a fixed seed for reproducibility. */
+    private Random random;
+
+    /**
+     * Initializes the tour and heuristic-specific data structures for the random insertion heuristic.
+     *
+     * @param data            The TSP data.
+     * @param startCityIndex  The index of the starting city.
+     * @param tourList        The list representing the current tour.
+     * @param inTour          Array indicating whether a city is already in the tour.
+     */
     @Override
-    public TspTour computeTour(TspData data, int startCityIndex, TspHeuristicObserver observer) {
-        int n = data.getNumberOfCities();
-        List<Integer> tourList = new ArrayList<>();
-        List<Integer> remainingCities = new ArrayList<>();
-        long length = 0;
+    protected void initialize(TspData data, int startCityIndex, List<Integer> tourList, boolean[] inTour) {
+        // Initialize the list of remaining cities
+        remainingCities = new ArrayList<>();
+        // Initialize the random number generator with a fixed seed for consistent results
+        random = new Random(0x134DA73);
 
-        // Initialiser le générateur de nombres pseudo-aléatoires avec la graine spécifiée
-        Random random = new Random(0x134DA73);
-
-        // Initialiser la tournée avec la ville de départ
+        // Initialize the tour with the starting city
         tourList.add(startCityIndex);
+        inTour[startCityIndex] = true;
 
-        // Construire la liste des villes restantes
+        // Build the list of remaining cities
         for (int city = 0; city < n; city++) {
-            if (city != startCityIndex) {
+            if (!inTour[city]) {
                 remainingCities.add(city);
             }
         }
 
-        // Si au moins une autre ville est disponible, on ajoute une deuxième ville pour commencer
+        // Shuffle the remaining cities to randomize the insertion order
+        Collections.shuffle(remainingCities, random);
+
+        // Add the first random city to the tour to start the process
         if (!remainingCities.isEmpty()) {
-            // Mélanger les villes restantes
-            Collections.shuffle(remainingCities, random);
-
-            // Sélectionner la première ville aléatoire
-            int firstCity = remainingCities.removeFirst();
-
-            // Ajouter la ville à la tournée
+            int firstCity = remainingCities.removeFirst(); // remainingCities.remove(0);
             tourList.add(firstCity);
+            inTour[firstCity] = true;
 
-            // Calculer la longueur initiale de la tournée
-            length += data.getDistance(startCityIndex, firstCity);
-            length += data.getDistance(firstCity, startCityIndex); // Boucler la tournée
-
-            // Notifier l'observateur de l'état actuel de la tournée
-            observer.update(new Traversal(tourList));
+            // Add the initial length of the tour (distance from starting city to first random city)
+            length = data.getDistance(startCityIndex, firstCity);
+            length += data.getDistance(firstCity, startCityIndex); // Add the return trip
         }
+    }
 
-        // Boucle principale pour insérer les villes restantes
-        while (!remainingCities.isEmpty()) {
-
-            // Choisir la première ville aléatoire
-            int cityToInsert = remainingCities.removeFirst();
-
-            // Trouver le meilleur emplacement pour insérer la ville
-            int bestPosition = -1;
-            long minIncrease = Long.MAX_VALUE;
-
-            for (int i = 0; i < tourList.size(); i++) {
-                int from = tourList.get(i);
-                int to = tourList.get((i + 1) % tourList.size()); // Boucle vers le début si nécessaire
-
-                // Calculer l'augmentation de la longueur si la ville est insérée ici
-                long currentDistance = data.getDistance(from, to);
-                long newDistance = data.getDistance(from, cityToInsert) + data.getDistance(cityToInsert, to);
-                long increase = newDistance - currentDistance;
-
-                if (increase < minIncrease) {
-                    minIncrease = increase;
-                    bestPosition = i + 1; // Position d'insertion après 'from'
-                }
-            }
-
-            // Insérer la ville à la meilleure position trouvée
-            tourList.add(bestPosition, cityToInsert);
-
-            // Mettre à jour la longueur totale de la tournée
-            length += minIncrease;
-
-            // Notifier l'observateur de l'état actuel de la tournée
-            observer.update(new Traversal(tourList));
+    /**
+     * Selects the next city to insert into the tour.
+     * The city selected is the next city in the shuffled list of remaining cities.
+     *
+     * @param data    The TSP data.
+     * @param inTour  Array indicating whether a city is already in the tour.
+     * @return        The index of the next city to insert.
+     */
+    @Override
+    protected int selectNextCity(TspData data, boolean[] inTour) {
+        if (remainingCities.isEmpty()) {
+            throw new IllegalStateException("No more cities to insert");
         }
+        return remainingCities.removeFirst();
+    }
 
-        // Construire le tableau final de la tournée
-        int[] tour = new int[n];
-        for (int i = 0; i < n; i++) {
-            tour[i] = tourList.get(i);
-        }
-
-        // Ajouter la distance pour boucler la tournée si ce n'est pas déjà fait
-        if (tourList.size() > 1) {
-            length += data.getDistance(tourList.getLast(), tourList.getFirst());
-        }
-
-        // Retourner la tournée complète
-        return new TspTour(data, tour, length);
+    /**
+     * Updates data structures after inserting a new city into the tour.
+     * For RandomInsertion, no specific updates are necessary.
+     *
+     * @param data         The TSP data.
+     * @param insertedCity The index of the city that has just been inserted.
+     * @param inTour       Array indicating whether a city is already in the tour.
+     */
+    @Override
+    protected void updateAfterInsertion(TspData data, int insertedCity, boolean[] inTour) {
+        // No updates required for RandomInsertion
     }
 }
